--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   box-sizing: border-box;
@@ -28,19 +27,19 @@ header .advertising img {
   display: flex;
   justify-content: space-between;
 }
-.header img {
+.header .logo {
   padding-top: 25px;
 }
-.header .menu {
+.header nav {
   padding-top: 37px;
 }
-.header .menu ul {
+.header nav ul {
   display: flex;
 }
-.header .menu li:not(:last-child) {
+.header nav li:not(:last-child) {
   margin-right: 60px;
 }
-.header .menu a {
+.header nav a {
   color: #3E3E42;
   font-family: "Roboto";
   font-style: normal;
@@ -49,6 +48,11 @@ header .advertising img {
   line-height: 26px;
 }
 
+@media screen and (max-width: 767px) {
+  .advertising {
+    display: none;
+  }
+}
 .banner-wrapper {
   background-color: #FDF7F0;
 }
@@ -141,10 +145,7 @@ header .advertising img {
 .advantages .advantages__card .advantages__card__text {
   max-width: 249px;
 }
-.advantages .advantages__card img {
-  max-width: 100%;
-  /*надо подумать почему без этого сплющиваются*/
-  max-height: 40px;
+.advantages .advantages__card .advantages__card__image {
   margin-right: 16px;
 }
 .advantages .advantages__card h4 {
